# piper

./: .flake8  .gitignore  README.md  circle.yml  meson.build  org.freedesktop.Piper.json  piper.in
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.md
data/: aboutDialog.ui.in  check-files-in-git.sh  check-svg-in-meson.build.sh  generate-piper-gresource.xml.py  meson.build  org.freedesktop.Piper.appdata.xml.in  org.freedesktop.Piper.desktop  piper.gresource.xml  piper.gresource.xml.in  resolutionRow.ui  resolutionsPage.ui  svg-lookup-ini-test.py  window.ui
data/svgs/: README.md  check-svg.py  svg-lookup.ini
data/ui/: AboutDialog.ui.in  ButtonDialog.ui  ButtonRow.ui  DeviceRow.ui  ErrorPerspective.ui  LedDialog.ui  MousePerspective.ui  OptionButton.ui  ProfileRow.ui  ResolutionRow.ui  ResolutionsPage.ui  WelcomePerspective.ui  Window.ui
piper/: application.py  buttondialog.py  buttonspage.py  devicerow.py  errorperspective.py  gi_composites.py  keystroke.py  leddialog.py  ledspage.py  mousemap.py  mouseperspective.py  optionbutton.py  piper.py  profilerow.py  ratbagd.py  resolutionrow.py  resolutionspage.py  svg.py  welcomeperspective.py  window.py
po/: LINGUAS  POTFILES  README.md  be.po  bg.po  de.po  es.po  fr.po  hr.po  meson.build  nl.po  pl.po  pt_BR.po  sv.po  zh_TW.po
